[gd_scene load_steps=12 format=3 uid="uid://y5gn7wocnt01"]

[ext_resource type="Texture2D" uid="uid://df6iacmx6gfw4" path="res://characterArt/oscar.png" id="1_1x2h5"]
[ext_resource type="Texture2D" uid="uid://by0xr5sibins4" path="res://backgrounds/cityFar.jpg" id="1_o6ku6"]
[ext_resource type="Script" path="res://Scenes/CharacterSelect/characterSelect.gd" id="1_rvb2k"]
[ext_resource type="Texture2D" uid="uid://dfiej5eybh3i7" path="res://characterArt/soup.png" id="2_b5qh2"]
[ext_resource type="Texture2D" uid="uid://dskyxhmk5qiwt" path="res://characterArt/meep.png" id="4_lps5l"]
[ext_resource type="Texture2D" uid="uid://d4jb1wragrn16" path="res://tiles/Tiles.png" id="5_8rfut"]
[ext_resource type="Texture2D" uid="uid://thnpecyafams" path="res://backgrounds/characterSelect.png" id="6_oi2cg"]
[ext_resource type="Texture2D" uid="uid://bssygnthujdhn" path="res://backgrounds/pickTwoCharacters.png" id="7_q1y2f"]
[ext_resource type="Texture2D" uid="uid://cd4urwabvwsqe" path="res://Scenes/CharacterSelect/pick_characters.png" id="9_q350f"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lci85"]
texture = ExtResource("5_8rfut")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_cfey0"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_lci85")

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rvb2k")

[node name="CityFar" type="Sprite2D" parent="."]
modulate = Color(0.58, 0.58, 0.58, 1)
position = Vector2(532, -148)
scale = Vector2(0.558762, 0.558762)
texture = ExtResource("1_o6ku6")

[node name="Oscar" type="Sprite2D" parent="."]
position = Vector2(256, 401)
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_1x2h5")

[node name="Soup" type="Sprite2D" parent="."]
position = Vector2(1025, 401)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_b5qh2")

[node name="Meep" type="Sprite2D" parent="."]
position = Vector2(640, 401)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_lps5l")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-775.938, 96)
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_cfey0")

[node name="CharacterSelect" type="Sprite2D" parent="."]
position = Vector2(640, 96)
texture = ExtResource("6_oi2cg")

[node name="PickTwoCharacters" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 200)
scale = Vector2(0.419598, 0.419598)
texture = ExtResource("7_q1y2f")

[node name="soupButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 968.0
offset_top = 550.0
offset_right = 1085.0
offset_bottom = 614.0
text = "Soup
W A S D
LSHIFT"
alignment = 1

[node name="meepButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 584.0
offset_top = 550.0
offset_right = 701.0
offset_bottom = 614.0
text = "M-33P
Arrow Keys
RSHIFT"
alignment = 1

[node name="oscarButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 550.0
offset_right = 309.0
offset_bottom = 614.0
text = "Oscar
I J K L
Space"
alignment = 1

[node name="confirmCharactersButton" type="Button" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 632.0
offset_right = 720.0
offset_bottom = 688.0
text = "Confirm"

[node name="PickCharacters" type="Sprite2D" parent="."]
position = Vector2(642.286, 203.5)
scale = Vector2(0.535714, 0.535714)
texture = ExtResource("9_q350f")

[connection signal="toggled" from="soupButton" to="." method="_on_soup_button_toggled"]
[connection signal="toggled" from="meepButton" to="." method="_on_meep_button_toggled"]
[connection signal="toggled" from="oscarButton" to="." method="_on_oscar_button_toggled"]
[connection signal="pressed" from="confirmCharactersButton" to="." method="_on_confirm_characters_button_pressed"]
